<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:paddingTop="25dp"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/Me_CI_user"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/dingdong"/>
            <TextView
                android:id="@+id/Me_TV_yonghuminbg"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:text="@string/login"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </FrameLayout>
    <TextView
        android:id="@+id/Me_TV_myseat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp"
        android:text="@string/myseat"
        android:textSize="18sp"/>
    <ImageView
        android:background="@color/darkgray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/Me_TV_myactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16sp"
            android:text="@string/myactivity"
            android:textSize="18sp"/>
        <ImageView
            android:background="@color/darkgray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/Me_TV_releaseactivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16sp"
            android:text="@string/releaseactivities"
            android:textSize="18sp"/>
        <ImageView
            android:background="@color/darkgray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/Me_TV_releasemeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16sp"
            android:text="@string/releasemeal"
            android:textSize="18sp"/>
        <ImageView
            android:background="@color/darkgray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </LinearLayout>
</LinearLayout>
