<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dingdong.com.mql.www.compusdingdong.activity.RegisterActivity">
    <LinearLayout
        android:paddingTop="25dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <ImageButton
            android:id="@+id/fanhui_button"
            android:layout_width="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_action_back_white"/>
    </LinearLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/Register_CI_userpicture"
        android:layout_gravity="center_horizontal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:src="@drawable/dingdong"/>
    <dingdong.com.mql.www.compusdingdong.activity.view.MyEditText
        android:id="@+id/Register_ET_username"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/username"
        android:textCursorDrawable="@drawable/bg_cursor"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <dingdong.com.mql.www.compusdingdong.activity.view.MyEditText
        android:id="@+id/Register_ET_account"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/account"
        android:textCursorDrawable="@drawable/bg_cursor"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <dingdong.com.mql.www.compusdingdong.activity.view.MyEditText
        android:id="@+id/Register_ET_password"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:textCursorDrawable="@drawable/bg_cursor"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <dingdong.com.mql.www.compusdingdong.activity.view.MyEditText
        android:id="@+id/Register_ET_passwordsuer"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:textCursorDrawable="@drawable/bg_cursor"
        android:inputType="textPassword"
        android:hint="@string/passwordsuer"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/Register_Btn_register_button"
        android:layout_margin="16dp"
        android:text="@string/register"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
</LinearLayout>
