<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dingdong.com.mql.www.compusdingdong.activity.ReleaseActivity">
    <LinearLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <ImageButton
            android:id="@+id/fanhui_button"
            android:layout_width="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_action_back_white"/>
    </LinearLayout>
    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/Release_IM_activitypicture"
            android:background="@drawable/dingdong"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>
        <dingdong.com.mql.www.compusdingdong.activity.view.MyEditText
            android:id="@+id/Release_ET_activityname"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:hint="@string/activityname"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <dingdong.com.mql.www.compusdingdong.activity.view.MyEditText
            android:id="@+id/Release_ET_activitytime"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:hint="@string/activitytime"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <dingdong.com.mql.www.compusdingdong.activity.view.MyEditText
            android:id="@+id/Release_ET_activityplace"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:hint="@string/activityplace"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <TextView
            android:text="@string/activityintroduction"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/Release_ET_activityintroduction"
            android:hint="@string/activityintroduction"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="14sp"
            android:padding="5dp"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:background="@drawable/bg_discribe"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>
        <Button
            android:id="@+id/Release_Btn_submit_button"
            android:layout_margin="16dp"
            android:text="@string/submit"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
