<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dingdong.com.mql.www.compusdingdong.activity.LoginActivity">
    <LinearLayout
        android:paddingTop="25dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <ImageButton
            android:id="@+id/fanhui_button"
            android:layout_width="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_action_back_white"/>
    </LinearLayout>
    <dingdong.com.mql.www.compusdingdong.activity.view.MyEditText
        android:id="@+id/Login_ET_account"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/account"
        android:textCursorDrawable="@drawable/bg_cursor"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <dingdong.com.mql.www.compusdingdong.activity.view.MyEditText
        android:id="@+id/Login_ET_password"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:textCursorDrawable="@drawable/bg_cursor"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/Login_Btn_login_button"
        android:layout_margin="16dp"
        android:text="登录"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
    <RelativeLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/Login_TV_register"
            android:layout_alignParentRight="true"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</LinearLayout>
