<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dingdong.com.mql.www.compusdingdong.activity.ReleaseMealActivity">
    <LinearLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <ImageButton
            android:id="@+id/fanhui_button"
            android:layout_width="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_action_back_white"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/RMeal_IM_mealpicture"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:background="@drawable/dingdong_dack"/>

            <dingdong.com.mql.www.compusdingdong.activity.view.MyEditText
                android:id="@+id/RMeal_ET_mealname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:hint="@string/mealname"
                android:textCursorDrawable="@drawable/bg_cursor"/>

            <dingdong.com.mql.www.compusdingdong.activity.view.MyEditText
                android:id="@+id/RMeal_ET_mealplace"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:hint="@string/mealplace"
                android:textCursorDrawable="@drawable/bg_cursor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/mealintroduction"/>

            <EditText
                android:id="@+id/RMeal_ET_mealintroduction"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg_discribe"
                android:gravity="start"
                android:hint="@string/mealintroduction"
                android:inputType="textMultiLine"
                android:padding="5dp"
                android:textCursorDrawable="@drawable/bg_cursor"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/RMeal_Btn_submit_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:background="@drawable/button"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
